--- a/index/index.html
+++ b/index/index.html
@@ -11,7 +11,7 @@
 <body>
 <div class="img-div" >
     <a href="../Movies1/project1.html" target="_blank" ><img src="https://cdn0.iconfinder.com/data/icons/movie-filled-outline/340/movie_film_cinema_entertainment_video_filmstrip-512.png" class="img1" width="300px" height="300px"></a>
-    <a href="../Movies2/project2.html" target="_blank" ><img src="https://cdn4.iconfinder.com/data/icons/education-738/64/graduation-university-scholarship-degree-education-book-hat-512.png" class="img1" width="300px" height="300px"></a>
+    <a href="../Libarary/index.html" target="_blank" ><img src="https://cdn4.iconfinder.com/data/icons/education-738/64/graduation-university-scholarship-degree-education-book-hat-512.png" class="img1" width="300px" height="300px"></a>
     <div class="vardan" ></div>
 </div>
 </body>
